lab3/store/lin-kv/20220429T050001.000+0100/node-logs/n4.log
  File "/home/peter/Documents/tf/lab3/raft.py", line 324
    global current_term 
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: name 'current_term' is used prior to global declaration
